feat: GetUsersByOrganization + its frontend
